Fixed: Mission Image Overlap

--- a/style.css
+++ b/style.css
@@ -56,13 +56,13 @@
   #mission-background {
     height: 700px;
     width: 1200px;
-    margin: 70px;
     object-fit: cover;
     object-position: top;
   }
   
   #mission {
     height: 700px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
